# SousVide

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  colmap_to_mocap_sim3.json  coordinate_transform.py  environment_test.yml  environment_x86.yml  falsification_overview.txt  minimal_sousvide_trajectory_corrective.py  minimal_sousvide_trajectory_corrective_right.py  ns_viewer_with_trajectories.py  pyproject.toml  recover_falsification_episode.py  render_falsification_cameras.py  requirements-rest.txt  run.sh  run_falsification.py  scene_with_markers.ply  transform_summary.md  view_falsification_trajectories.py  view_gate_perturbation.py
artifacts/left_gate/: left_gate_bottom_centroid.npy  left_gate_bottom_mask.npy  left_gate_bottom_points.npy  left_gate_centroid.npy  left_gate_mask.npy  left_gate_points.npy  left_table_mask.npy  left_table_points.npy
artifacts/right_gate/: right_gate_bottom_centroid.npy  right_gate_bottom_mask.npy  right_gate_bottom_points.npy  right_gate_centroid.npy  right_gate_mask.npy  right_gate_points.npy  right_table_mask.npy  right_table_points.npy
configs/course/: hover.json  line.json
configs/courses/: bounce1.json  bounce2.json  button_app.json  button_arc.json  button_hov.json  button_press.json  button_prod.json  circuit.json  cluttered_env_track.json  crescent.json  extended_traj_track.json  hover.json  infinity.json  line.json  line_clean.json  line_f5.json  line_sides.json  robustness_track.json  robustness_track_f1.json  robustness_track_f2.json  robustness_track_f3.json  robustness_track_f4.json  robustness_track_f5.json  robustness_track_mid.json  section1.json  section2.json  section3.json  spiral.json  traverse.json  traverse_f2.json
configs/falsification/: config_bad_gate.yaml  config_gate_only.yaml  config_long.yaml  no_perturbation.yaml
configs/frames/: carl.json
configs/inputs/: advanced.json  basic.json
configs/method/: alpha.json  beta_external.json  data_beta.json  data_beta_f0.json  data_beta_f1.json  data_beta_f2.json  data_beta_f3.json  data_beta_f4.json  data_beta_f5.json  data_beta_forced.json  data_gamma.json  eval_mocap.json  eval_nominal.json  eval_nominal_forced.json  eval_single.json  eval_single_f1.json  eval_single_f2.json  eval_single_f3.json  eval_single_f4.json  eval_single_f5.json  full_pert_challenged.json  full_pert_nominal.json  sampling_alpha.json  sampling_beta.json  sampling_beta_forced.json  sampling_gamma.json
configs/methods/: data_alpha.json  data_alpha_same.json  data_beta.json  data_gamma.json  eval_challenged.json  eval_extreme.json  eval_mocap.json  eval_nominal.json  eval_single.json  test0_data.json  test0_eval.json  test1_data.json  test1_eval.json  test2_data.json  test2_data_f2.json  test2_eval.json  test_data.json  test_eval.json
configs/nnio/: basic.json  image.json  sequence.json
configs/pilots/: Chuck.json  DRNet.json  Daishi.json  FHNet.json  Hangman.json  Iceman.json  Jester.json  MENet.json  Maverick.json  PaveLow.json  QZNet.json  Rooster.json  Rooster_v2.json  Rooster_v3.json  Vader.json  Viper.json  clanGhostBear.json  clanJadeFalcon.json  clanNovaCat.json  clanSmokeJaguar.json  clanWolf.json  hsCameron.json  hsDavion.json  hsKurita.json  hsLiao.json  hsMarik.json  hsSteiner.json  vrfqp_fr.json  vrfqp_fr_v1.json  vrfqp_fr_v2.json  vrmpc_fe.json
configs/rollout/: assisted.json  challenged.json  external.json  extreme.json
docker/: Dockerfile  docker-compose.yml  environment_x86.yml
falsification_results/debug_mpc/: config.yaml
falsification_results/debug_mpc2/: config.yaml  summary.json  visualization_manifest.json
falsification_results/debug_run/: config.yaml  summary.json  visualization_manifest.json
falsification_results/long_run/: config.yaml  summary.json  visualization_manifest.json
feature_experiments/: vit_features.ipynb
notebooks/: experimental.ipynb  figs_examples.ipynb  mts_example.ipynb  sous_vide_examples.ipynb  test0.ipynb  test1.ipynb  test2.ipynb  test2.py  trace_test.ipynb  trajectory_time.ipynb  vit_circus.ipynb  vit_circus2.ipynb  vit_decoder.ipynb  vit_experimental.ipynb  vit_features copy.ipynb  vit_features.ipynb  vit_features_old.ipynb  vit_final.ipynb  vit_flight_path.ipynb  vit_forces.ipynb  vit_general.ipynb  vit_test1.ipynb  vit_test2.ipynb  vit_transformers.ipynb  vitamin_test.ipynb
scripts/: recover_falsification_episode.py  render_falsification_cameras.py
scripts/debug/: compare_distances.py  compare_viewer_chains.py  debug_generate_gate_perturbation_samples.py  generate_traj_pointclouds.py  plot_vla_waypoints.py  test_recovery_debug.py  verify_transforms.py  view_gate_perturbation.py  visualize_scene_positions.py  visualize_scene_positions_mpl.py  visualize_splatnav_voxels.py
scripts/demo/: minimal_sousvide_trajectory_corrective.py  minimal_sousvide_trajectory_corrective_right.py
scripts/visualization/: ns_viewer_with_trajectories.py
src/sousvide/control/: network_factory.py  network_helper.py  pilot.py  policy.py  vla_policy.py
src/sousvide/falsification/: config.py  failure_detector.py  orchestrator.py  perturbations.py  splatnav_recovery.py
src/sousvide/flight/: deploy_figs.py  flight_helper.py
src/sousvide/instruct/: losses.py  reinforcement_learning copy.py  reinforcement_learning.py  synthesized_data.py  train_heatmap.py  train_policy.py
src/sousvide/synthesize/: circus_generator.py  compress_helper.py  data_compress_helper.py  heatmap_generator.py  observation_generator.py  rollout_generator.py  simple_generator.py  synthesize_helper.py
src/sousvide/utilities/: coordinate_transform.py  feature_utilities.py  sousvide_utilities.py
src/sousvide/visualize/: plot_3D.py  plot_fouts.py  plot_learning.py  plot_synthesize.py  plot_time.py  plot_utilities.py  rich_utilities.py
src/vla_falsification/control/: vla_policy.py
src/vla_falsification/falsification/: __init__.py  config.py  orchestrator.py  perturbations.py  (+1 more)
tests/: conftest.py  test_campaign.py  test_coordinate_transform.py  test_failure_detector.py  test_ned_conversion.py  test_perturbations.py  test_vla_helpers.py
(+41 files in other folders)
