[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sousvide"
version = "0.1.0"
description = "Scene Understanding via Synthesized Visual Inertial Data from Experts"
authors = [{ name = "JunEn Low", email = "lowjunen@gmail.com.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ---- core scientific stack ----
    "numpy==1.26.4",
    "scipy",
    "sympy",
    "casadi",            # acados_template
    "cython",

    # ---- torch (resolved via pytorch-cu121 index below) ----
    "torch==2.1.2",
    "torchvision==0.16.2",

    # ---- computer vision / 3D ----
    "opencv-python-headless==4.10.0.84",
    "open3d",
    "trimesh",
    "albumentations",
    "kornia>=0.6.11",
    "pycolmap>=0.6.0",
    "captum",

    # ---- nerfstudio ecosystem ----
    "nerfstudio==1.1.0",
    "tinycudann",         # built from source; needs nvcc
    "gsplat==0.1.13",
    "viser",
    "lightglue",

    # ---- planning / optimization ----
    "qpsolvers",
    "clarabel",
    "cvxpy",
    "cvxopt",
    "polytope",
    "dijkstra3d",
    "unfoldNd",

    # ---- data / IO ----
    "imageio[ffmpeg]",
    "gdown",
    "h5py",
    "Pillow",
    "pyrealsense2",

    # ---- notebook / viz ----
    "ipykernel",
    "ipympl",
    "matplotlib",
    "plotly",
    "tqdm",
    "tabulate",

    # ---- build tools ----
    "ninja",
    "setuptools<70",
    "wheel",
    "nvidia-cuda-nvcc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",

    # ---- VLA inference ----
    "openpi-client",

    # ---- sagesplat deps ----
    "clip",
    "timm",
    "ftfy",
    "regex",
    "einops",
    "torchtyping",

    # ---- local packages ----
    "figs",
    "acados-template",
    "hloc",
    "splatnav",
    "sagesplat",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------

[tool.uv]
# tiny-cuda-nn must be compiled against the local CUDA install; skip
# build isolation so it can find nvcc/CUDA headers on PATH / CUDA_HOME.
no-build-isolation-package = ["tinycudann"]


[tool.uv.sources]
# PyTorch CUDA 12.1 pre-built wheels
torch      = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

# Git sources
tinycudann = { git = "https://github.com/NVlabs/tiny-cuda-nn", subdirectory = "bindings/torch" }
lightglue    = { git = "https://github.com/cvg/LightGlue" }
clip         = { git = "https://github.com/openai/CLIP.git" }

# Local editable installs
figs            = { path = "./FiGS",                                                    editable = true }
acados-template = { path = "./FiGS/acados/interfaces/acados_template",                 editable = true }
hloc            = { path = "./FiGS/Hierarchical-Localization",                         editable = true }
splatnav        = { path = "./external/splatnav",                                      editable = true }
sagesplat       = { path = "./external/Splat-MOVER",                                   editable = true }

[[tool.uv.index]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true
